# nixl-topo-disc

./: .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  coding_prompts.txt  design_prompts.txt  repo_prompts.txt
cmake/: Dependencies.cmake
docker/: Dockerfile.in  entrypoint.sh.in  env-setup.sh.in
docs/: CLAUDE.md  Learnings.md  assumptions.md  error_handling.md  future_work.md  generate_design_doc.py  interpreting_results.md  module_comms.md  simulation_harness.md  simulation_harness.txt  test_harness.md  topology.md  topology_module.md  topology_module.txt
output/2025-12-17_02-21-11/: cluster_config.json  latency_matrix.csv  tier_config.json
output/2025-12-17_03-03-23/: bandwidth_detailed.csv  bandwidth_matrix.csv  latency_matrix.csv  test_config.json  tier_config.json
src/agent/: CLAUDE.md  CMakeLists.txt  agent.cpp  agent.hpp  agent_main.cpp
src/common/: CMakeLists.txt  memory.hpp  nixl_wrapper.cpp  nixl_wrapper.hpp  types.hpp
src/controller/: CLAUDE.md  CMakeLists.txt  controller.cpp  controller.hpp  controller_buffer.cpp  controller_buffer.hpp  controller_main.cpp
src/harness/: CLAUDE.md  CMakeLists.txt  harness.cpp  harness.hpp  harness_main.cpp
src/harness/config/: cluster_config.cpp  cluster_config.hpp
src/harness/network/: network_manager.cpp  network_manager.hpp
src/harness/scenarios/: default_test_config.json  full_test_config.json  simple_cluster.json  test_2_node.json  test_4_node.json  two_rack_full_test.json  two_rack_quick.json
src/harness/tc/: tc_manager.cpp  tc_manager.hpp
src/topology/: CLAUDE.md  CMakeLists.txt  code_structure.txt  dendrogram.cpp  dendrogram.hpp  latency_matrix.cpp  latency_matrix.hpp  tier_config.cpp  tier_config.hpp  topology_builder.cpp  topology_builder.hpp  topology_graph.cpp  topology_graph.hpp  topology_viz.cpp
tests/: CMakeLists.txt  test_controller_buffer.cpp  test_descriptions.txt  test_memory.cpp  test_topology.cpp  test_topology_description.txt  test_types.cpp
tests/test_data/: hierarchical_8node.csv  medium_8node.csv  small_4node.csv
tests/test_data/edge_cases/: asymmetric.csv  identical_latencies.csv  single_node.csv  two_nodes.csv
